--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.7.5",
     "@react-native-voice/voice": "^3.2.4",
+    "@react-navigation/stack": "7.3.0",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "@rneui/base": "^4.0.0-rc.7",
@@ -30,6 +31,7 @@
     "expo-build-properties": "0.13.2",
     "expo-camera": "~15.0.16",
     "expo-dev-client": "~4.0.29",
+    "expo-device": "~6.0.2",
     "expo-doctor": "^1.12.8",
     "expo-file-system": "~17.0.1",
     "expo-font": "^12.0.10",
@@ -39,9 +41,11 @@
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-network": "~6.0.1",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.24",
     "expo-screen-orientation": "~7.0.5",
     "expo-sensors": "~13.0.9",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-three": "^8.0.0",
     "expo-vector-icons": "^10.0.1",
@@ -51,8 +55,10 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-canvas": "^0.1.40",
+    "react-native-chart-kit": "6.12.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "8.2.1",
     "react-native-keyboard-controller": "^1.16.3",
     "react-native-maps": "1.14.0",
     "react-native-mathjax-svg": "^0.9.9",
@@ -66,10 +72,13 @@
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
+    "react-native-table-component": "1.2.2",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "react-native-wheel-picker-expo": "^0.5.4",
     "react-native-youtube-iframe": "^2.3.0",
+    "react-navigation-shared-element": "3.1.3",
+    "recharts": "2.15.3",
     "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.14"
   },
@@ -80,6 +89,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native-canvas": "^0.1.14",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-native-table-component": "1.2.8",
     "typescript": "~5.3.3"
   },
   "private": true,
